fixing off canvas navbar background flicker on mob

--- a/src/Styles/LikelyLoans/Navbar-off-canvas.scss
+++ b/src/Styles/LikelyLoans/Navbar-off-canvas.scss
@@ -158,7 +158,7 @@
 	    		width: 246px;
 	    		background-color: $brand-blue;
 	    	}
-	    	background-color: transparent;
+	    	// background-color: transparent;
 	    }
 	}
 
